results/SVCOMP/4-shot/log-ExSymExe26-2024_03_18_19_25_29.txt
class Main {

  //@ ensures \result ==> \result == true && y > 0 && z > 0 && \result == true;
  //@ ensures !\result ==> \result == false && (y <= 0 || z <= 0);
  public static boolean f() {
    int a = 3;
    Main inst = new Main();
    int b = 8;
    return inst.test(a, b, a);
  }

  //@ requires x > 0 && y > 0 && z > 0;
  //@ ensures \result ==> \result == true && y > 0 && z > 0 && \result == true;
  //@ ensures !\result ==> \result == false && (y <= 0 || z <= 0);
  public boolean test(int x, int y, int z) {
    System.out.println("Testing ExSymExe26");
    y = x;
    z++;
    if (z > 0) System.out.println("branch FOO1");
    else {
      return false;
    }
    if (y > 0) System.out.println("branch BOO1");
    else System.out.println("branch BOO2");

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:3: error: cannot find symbol
  //@ ensures \result ==> \result == true && y > 0 && z > 0 && \result == true;
                                             ^
  symbol:   variable y
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:3: error: cannot find symbol
  //@ ensures \result ==> \result == true && y > 0 && z > 0 && \result == true;
                                                      ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:4: error: cannot find symbol
  //@ ensures !\result ==> \result == false && (y <= 0 || z <= 0);
                                                ^
  symbol:   variable y
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe26.java:4: error: cannot find symbol
  //@ ensures !\result ==> \result == false && (y <= 0 || z <= 0);
                                                          ^
  symbol:   variable z
  location: class Main
4 errors

